# Copyright (c) 2021-2023, NVIDIA CORPORATION.

# MIT License
#
# Modifications Copyright (C) 2023-2025 Advanced Micro Devices, Inc. All rights reserved.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
# =============================================================================

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "cmake>=3.26.4",
    "cython>=3.0.0",
    "ninja",
    "numpy>=1.21,<1.25",
    "protoc-wheel",
    "pyarrow==14.0.1.*",
    "hipmm>=23.10",
    "scikit-build>=0.13.1",
    "setuptools",
    "wheel",
] # This list was generated by `rapids-dependency-file-generator`. To make changes, edit ../../dependencies.yaml and run `rapids-dependency-file-generator`.

[project]
name = "amd-hipdf"
version = "1.0.00"
description = "hipDF - GPU Dataframe for AMD GPUs"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Advanced Micro Devices, Inc." },
    { name = "NVIDIA Corporation" },
]
license = { text = "Apache 2.0" }
requires-python = ">=3.9"
dependencies = [
    "cachetools",
    #: "cubinlinker", #: TODO: HIP/AMD: use AMD equiv.
    #: "cuda-python>=11.7.1,<12.0a0",
    "hip-python>=5.6",
    "hip-python-as-cuda>=5.6",
    "amd-cupy-for-rocmds==13.0.0.b1",
    #: HIP/AMD: we build 'cupy' from source
    "fsspec>=0.6.0",
    "numba>=0.57,<=0.58", # FIXME: HIP/AMD: upstream uses numba<0.58!
    #: TODO: HIP/AMD: use AMD ver
    "numpy>=1.21,<1.25",
    #: "nvtx>=0.2.1",
    "packaging",
    "pandas>=1.3,<1.6.0dev0",
    "protobuf>=4.21,<5",
    #: "ptxcompiler",
    "pyarrow==14.*",
    "hipmm>=23.10",
    "typing_extensions>=4.0.0",
] # This list was generated by `rapids-dependency-file-generator`. To make changes, edit ../../dependencies.yaml and run `rapids-dependency-file-generator`.
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
test = [
    "fastavro>=0.22.9",
    "hypothesis",
    "mimesis>=4.1.0",
    "msgpack",
    "pytest",
    "pytest-benchmark",
    "pytest-cases",
    "pytest-cov",
    "pytest-xdist",
    "python-snappy>=0.6.0",
    "scipy",
    "tokenizers==0.13.1",
    "transformers==4.24.0",
    "tzdata",
] # This list was generated by `rapids-dependency-file-generator`. To make changes, edit ../../dependencies.yaml and run `rapids-dependency-file-generator`.

[project.urls]
Homepage = "https://github.com/rocm/hipdf"
# Documentation = "https://docs.rapids.ai/api/cudf/stable/"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
order_by_type = true
known_dask = [
    "dask",
    "distributed",
    "dask_cuda",
]
known_rapids = [
    "rmm",
]
known_first_party = [
    "cudf",
]
default_section = "THIRDPARTY"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DASK",
    "RAPIDS",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip = [
    "thirdparty",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "__init__.py",
]
